refactor(wh): merge alert selects to one repository (WH-212)